--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,7 +20,7 @@
 </div>
 <br>
 <div class="container">
-  <%= link_to "Members", project_memberships_path(@project) %>
+  <%= link_to "Memberships", project_memberships_path(@project) %>
 </div>
 
 <br>
