--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -8,11 +8,15 @@
 
 <%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
 
-  <div class="form-group">
+  <div class="container">
+    <div class="well form-inline col-md-5">
     <%= f.label :user_id %>
     <%= f.collection_select :user_id, User.all, :id, :full_name,
       {include_blank: "Please select.."},
       {class: "dropdown-toggle form-control"} %>
+    <%= f.select(:role, ["Owner", "Member"], {}, {class: "form-control"}) %>
+    <%= f.submit "Add new member", class: "btn btn-primary" %>
+    </div>
   </div>
 
 <% end %>
