--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -10,13 +10,41 @@
 
   <div class="container">
     <div class="well form-inline col-md-5">
-    <%= f.label :user_id %>
-    <%= f.collection_select :user_id, User.all, :id, :full_name,
-      {include_blank: "Please select.."},
-      {class: "dropdown-toggle form-control"} %>
-    <%= f.select(:role, ["Owner", "Member"], {}, {class: "form-control"}) %>
-    <%= f.submit "Add new member", class: "btn btn-primary" %>
+      <%= f.label :user_id %>
+      <%= f.collection_select :user_id, User.all, :id, :full_name,
+        {include_blank: "Please select.."},
+        {class: "dropdown-toggle form-control"} %>
+      <%= f.select(:role, ["Owner", "Member"], {}, {class: "form-control"}) %>
+      <%= f.submit "Add new member", class: "btn btn-primary" %>
     </div>
   </div>
 
 <% end %>
+<table>
+  <tbody>
+    <% @memberships.each do |membership| %>
+      <tr>
+        <%= form.for([@project,@membership]) do |f| %>
+        <td class="col-sm-2">
+          <%= link_to membership.user.full_name,
+          user_path(membership.user) %></td>
+        <td class="col-sm-1">
+          <%= f.select(:role, ["Owner","Member"]) %>
+        </td>
+        <td>
+          <%= f.submit "Update", class: "btn btn-primary" %>
+        </td>
+        <td>
+          <%= link_to "", project_membership_path(
+          @project,membership
+          ),
+          method: :delete, data: {
+          confirm: "Are you sure you want to delete this user?"
+          }, class: "glyphicon glyphicon-remove" %>
+        </td>
+        <% end %>
+      </tr>
+    <% end %>
+      </tr>
+  </tbody>
+</table>
