--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -24,7 +24,7 @@
   <tbody>
     <% @memberships.each do |membership| %>
       <tr>
-        <%= form.for([@project,@membership]) do |f| %>
+        <%= form_for([@project,@membership]) do |f| %>
         <td class="col-sm-2">
           <%= link_to membership.user.full_name,
           user_path(membership.user) %></td>
