--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -18,16 +18,16 @@
       <%= f.submit "Add new member", class: "btn btn-primary" %>
     </div>
   </div>
-
 <% end %>
+
 <table>
   <tbody>
-    <% @memberships.each do |membership| %>
+    <% @project.users.order(:first_name).each do |user| %>
       <tr>
         <%= form_for([@project,@membership]) do |f| %>
         <td class="col-sm-2">
-          <%= link_to membership.user.full_name,
-          user_path(membership.user) %></td>
+          <%= link_to user.full_name,
+          user_path(user) %></td>
         <td class="col-sm-1">
           <%= f.select(:role, ["Owner","Member"]) %>
         </td>
@@ -36,7 +36,7 @@
         </td>
         <td>
           <%= link_to "", project_membership_path(
-          @project,membership
+          @project,user
           ),
           method: :delete, data: {
           confirm: "Are you sure you want to delete this user?"
