--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -23,27 +23,29 @@
 <table>
   <tbody>
     <% @project.users.order(:first_name).each do |user| %>
-      <tr>
-        <%= form_for([@project,@membership]) do |f| %>
-        <td class="col-sm-2">
-          <%= link_to user.full_name,
-          user_path(user) %></td>
-        <td class="col-sm-1">
-          <%= f.select(:role, ["Owner","Member"]) %>
-        </td>
-        <td>
-          <%= f.submit "Update", class: "btn btn-primary" %>
-        </td>
-        <td>
-          <%= link_to "", project_membership_path(
-          @project,user
-          ),
-          method: :delete, data: {
-          confirm: "Are you sure you want to delete this user?"
-          }, class: "glyphicon glyphicon-remove" %>
-        </td>
-        <% end %>
-      </tr>
+      <% user.memberships.each do |membership| %>
+        <tr>
+          <%= form_for([@project,@membership]) do |f| %>
+          <td class="col-sm-2">
+            <%= link_to user.full_name,
+            user_path(user) %></td>
+          <td class="col-sm-1">
+            <%= f.select(:role, ["Owner","Member"]) %>
+          </td>
+          <td>
+            <%= f.submit "Update", class: "btn btn-primary" %>
+          </td>
+          <td>
+            <%= link_to "", project_membership_path(
+            @project,membership
+            ),
+            method: :delete, data: {
+            confirm: "Are you sure you want to delete this user?"
+            }, class: "glyphicon glyphicon-remove" %>
+          </td>
+          <% end %>
+        </tr>
+      <% end %>
     <% end %>
       </tr>
   </tbody>
