--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,52 +1,54 @@
+<div class="container">
+
 <h1>Manage Members</h1>
 
-<div class="breadcrumb">
-<%= link_to_unless_current 'Projects', projects_path(@project) %> >
-<%= link_to_unless_current @project.name, project_path(@project) %> >
-<%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
-</div>
-
-<%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
-
-  <div class="container">
-    <div class="well form-inline col-md-5">
-      <%= f.label :user_id %>
-      <%= f.collection_select :user_id, User.all, :id, :full_name,
-        {include_blank: "Please select.."},
-        {class: "dropdown-toggle form-control"} %>
-      <%= f.select(:role, ["Owner", "Member"], {}, {class: "form-control"}) %>
-      <%= f.submit "Add new member", class: "btn btn-primary" %>
-    </div>
+  <div class="breadcrumb">
+  <%= link_to_unless_current 'Projects', projects_path(@project) %> >
+  <%= link_to_unless_current @project.name, project_path(@project) %> >
+  <%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
   </div>
-<% end %>
 
-<table>
-  <tbody>
-    <% @project.users.order(:first_name).each do |user| %>
-      <% user.memberships.each do |membership| %>
-        <tr>
-          <%= form_for([@project,@membership]) do |f| %>
-          <td class="col-sm-2">
-            <%= link_to user.full_name,
-            user_path(user) %></td>
-          <td class="col-sm-1">
-            <%= f.select(:role, ["Owner","Member"]) %>
-          </td>
-          <td>
-            <%= f.submit "Update", class: "btn btn-primary" %>
-          </td>
-          <td>
-            <%= link_to "", project_membership_path(
-            @project,membership
-            ),
-            method: :delete, data: {
-            confirm: "Are you sure you want to delete this user?"
-            }, class: "glyphicon glyphicon-remove" %>
-          </td>
-          <% end %>
-        </tr>
+  <%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
+
+      <div class="well form-inline col-md-5">
+        <%= f.label :user_id %>
+        <%= f.collection_select :user_id, User.all, :id, :full_name,
+          {include_blank: "Please select.."},
+          {class: "dropdown-toggle form-control"} %>
+        <%= f.select(:role, ["Owner", "Member"], {}, {class: "form-control"}) %>
+        <%= f.submit "Add new member", class: "btn btn-primary" %>
+      </div>
+  <% end %>
+
+  <table>
+    <tbody>
+      <% @project.users.order(:first_name).each do |user| %>
+        <% user.memberships.each do |membership| %>
+          <tr>
+            <%= form_for([@project,membership]) do |f| %>
+            <td class="col-sm-2">
+              <%= link_to user.full_name,
+              user_path(user) %></td>
+            <td class="col-sm-1">
+              <%= f.select(:role, ["Owner","Member"]) %>
+            </td>
+            <td>
+              <%= f.submit class: "btn btn-primary" %>
+            </td>
+            <td>
+              <%= link_to "", project_membership_path(
+              @project,membership
+              ),
+              method: :delete, data: {
+              confirm: "Are you sure you want to delete this user?"
+              }, class: "glyphicon glyphicon-remove" %>
+              <br>
+            </td>
+            <% end %>
+          </tr>
+        <% end %>
       <% end %>
-    <% end %>
-      </tr>
-  </tbody>
-</table>
+        </tr>
+    </tbody>
+  </table>
+</div>
