changed a few things in my form so it would work

--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-<h1>Manage Members</h1>
+<h1><%= @project.name %> : Manage Members</h1>
 
   <div class="breadcrumb">
   <%= link_to_unless_current 'Projects', projects_path(@project) %> >
@@ -8,8 +8,12 @@
   <%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
   </div>
 
-  <%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
+<div class="container text-left">
+  <%= render 'errorform/errorform', model: @membership %>
+</div>
 
+
+  <%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
       <div class="well form-inline col-md-5">
         <%= f.label :user_id %>
         <%= f.collection_select :user_id, User.all, :id, :full_name,
@@ -19,6 +23,7 @@
         <%= f.submit "Add new member", class: "btn btn-primary" %>
       </div>
   <% end %>
+
 
   <table>
     <tbody>
