--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -8,12 +8,12 @@
   <%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
   </div>
 
-<div class="container text-left">
+<div class="pull-left">
   <%= render 'errorform/errorform', model: @membership %>
 </div>
 
-
   <%= form_for([@project, @membership], html: {class: "form-horizonal"}) do |f| %>
+
       <div class="well form-inline col-md-5">
         <%= f.label :user_id %>
         <%= f.collection_select :user_id, User.all, :id, :full_name,
@@ -24,16 +24,15 @@
       </div>
   <% end %>
 
-
   <table>
     <tbody>
       <% @project.users.order(:first_name).each do |user| %>
-        <% user.memberships.each do |membership| %>
+        <% user.memberships.where(project_id: @project).each do |membership| %>
           <tr>
             <%= form_for([@project,membership]) do |f| %>
             <td class="col-sm-2">
               <%= link_to user.full_name,
-              user_path(user) %></td>
+              user_path(user) %>  </td>
             <td class="col-sm-1">
               <%= f.select(:role, ["Owner","Member"]) %>
             </td>
