--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,13 +1,10 @@
-<div class="container">
+<h1><%= @project.name %> : Manage Members</h1>
 
-<div class="page-header">
-  <span class="h1"><%= @project.name %>: Manage Memberships</span>
-</div>
-<ol class="breadcrumb">
-  <li><%= link_to "Projects", projects_path %></li>
-  <li><%= link_to @project.name, project_path(@project) %></li>
-  <li class="active">Memberships</li>
-</ol>
+  <div class="breadcrumb">
+  <%= link_to_unless_current 'Projects', projects_path(@project) %> >
+  <%= link_to_unless_current @project.name, project_path(@project) %> >
+  <%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
+  </div>
 
 <div class="pull-left">
   <%= render 'errorform/errorform', model: @membership %>
@@ -25,35 +22,51 @@
       </div>
   <% end %>
 
-  <table>
+<div class="col col-sm-8">
+  <table class="table">
+    <thead>
+        <tr>
+            <th>
+              User
+            </th>
+            <th>
+              Title
+            </th>
+            <th>
+              Update
+            </th>
+            <th>
+              Destroy
+            </th>
+        </tr>
+    </thead>
     <tbody>
       <% @project.users.order(:first_name).each do |user| %>
         <% user.memberships.where(project_id: @project).each do |membership| %>
-          <tr>
             <%= form_for([@project,membership]) do |f| %>
-            <td class="col-sm-2">
+              <tr>
+                <td>
               <%= link_to user.full_name,
-              user_path(user) %>  </td>
-            <td class="col-sm-1">
+              user_path(user) %>
+                </td>
+              <td>
               <%= f.select(:role, ["Owner","Member"]) %>
-            </td>
-            <td>
+              </td>
+              <td>
               <%= f.submit class: "btn btn-primary" %>
-            </td>
-            <td>
+              </td>
+              <td>
               <%= link_to "", project_membership_path(
               @project,membership
               ),
               method: :delete, data: {
               confirm: "Are you sure you want to delete this user?"
               }, class: "glyphicon glyphicon-remove" %>
-              <br>
-            </td>
+              </td>
+            </tr>
             <% end %>
-          </tr>
         <% end %>
       <% end %>
-        </tr>
     </tbody>
   </table>
 </div>
