--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-  <div class="page-header"><h1>Tasks for <%= @project.name %></h1>
+  <div class="page-header"><h1>Tasks for <%= @project.name %>
+  <%= link_to 'Create Task', new_project_task_path(@project,@task),
+  class: "btn btn-info btn-large pull-right" %></h1>
     <div class="breadcrumbs">
       <%= link_to_unless_current 'Projects', projects_path(@project) %> >
       <%= link_to_unless_current @project.name, project_path(@project) %> >
@@ -32,5 +34,4 @@
       <% end %>
     </tbody>
   </table>
-  <%= link_to 'Create Task', new_project_task_path(@project,@task), class: "btn btn-info"%>
 </div>
