--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 
 <hr>
 
-    <footer class="navbar-fixed-bottom">
+    <footer>
       <div class = "container">
 
       <%= link_to_unless_current "About", about_path %> |
@@ -61,7 +61,7 @@
       <%= link_to_unless_current "Projects", projects_path %>
 
 
-        <div class = "icons">
+        <div class = "icons pull-right">
             <%= link_to "https://www.twitter.com/dpmidd" do %>
               <%= image_tag("twitterlogo.png", width: "20em") %>
             <% end %>
