--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,10 +15,13 @@
            <tr>
                <td><%= link_to user.first_name, user_path(user) %><%= " " %><%= link_to user.last_name, user_path(user) %></td>
                <td><%= link_to user.email_address, user_path(user) %></td>
-               <td class="form-actions align-right">
+               <td class="form-actions">
+                 <div class="pull-right">
                  <%= link_to 'Show', user, class: "btn btn-success" %>
                  <%= link_to 'Edit', edit_user_path(user), class: "btn btn-primary" %>
-                 <%= link_to 'Destroy ', user, class:"btn btn-danger btn-large", method: :delete, data: { confirm: 'Are you sure?' } %>
+                 <%= link_to 'Destroy ', user, class:"btn btn-danger btn-large",
+                 method: :delete, data: { confirm: 'Are you sure?' } %>
+                 </div>
                </td>
            </tr>
          <% end %>
