--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,13 @@
     <%= render 'form' %>
   <br>
 
+  <div class="pull-center">
+  <%= link_to 'Show', @user %> |
+  <%= link_to 'Back', users_path %>
+  </div>
+
   <div class="col-sm-offset-2 col-sm-4 well well-lg text-center">
-    <%= link_to 'Delete User', user_path(@user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-    <%= link_to 'Show', @user %> |
-    <%= link_to 'Back', users_path %>
+    <%= link_to 'Delete User', user_path(@user),
+    method: :delete, data: { confirm: 'Are you sure?' },
+    class: "btn btn-danger" %>
   </div>
