--- a/app/views/errorform/_errorform.html.erb
+++ b/app/views/errorform/_errorform.html.erb
@@ -1,5 +1,5 @@
 <% if model.errors.any? %>
-      <div class="error_explanation" class="form-group">
+      <div id="error_explanation" class="form-group">
         <div class="alert alert-danger col-sm-offset-2 col-sm-4">
           <h4><%= pluralize(model.errors.count, "error") %> prohibited this task from being saved:</h4>
           <ul>
