--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,22 +1,11 @@
-<div class="container">
+
     <div class="col-md-offset-4 col-md-4">
       <div class="well">
   <h2>Register for gCamp!</h2>
-
-
-  <div>
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <ul class="list-unstyled">
-    <% @user.errors.full_messages.each do |msg| %>
-      <div style="color:red"><li><%= msg %></li><div>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+  
+<%= render 'errorform/errorform', model: @user %>
 
   <%= form_for @user, url: signup_path do |f| %>
-
     <div class="First Name">
       <%= f.label :first_name %>
       <%= f.text_field :first_name, class:"form-control, col-sm-12" %>
@@ -48,4 +37,3 @@
   <% end %>
       </div>
     </div>
-</div>
