Added comments form to tasks

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,20 +1,19 @@
 <p id="notice"><%= notice %></p>
-
 <p>
   <strong>Description:</strong>
   <%= @task.description %>
 </p>
-
 <p>
   <strong>Date:</strong>
   <%= @task.due %>
 </p>
-
 <p>
   <strong>Complete:</strong>
   <%= @task.complete %>
 </p>
-
-
 <%= link_to 'Edit', edit_project_task_path(@project,@task) %> |
 <%= link_to 'Back', project_tasks_path(@project) %>
+
+<%= form_for [@comment] do |f| %>
+  <%= f.text_area :comment, :class => 'form-control' %>
+<% end %>
