--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -14,6 +14,7 @@
 <%= link_to 'Edit', edit_project_task_path(@project,@task) %> |
 <%= link_to 'Back', project_tasks_path(@project) %>
 
-<%= form_for [@comment] do |f| %>
+<%= form_for [@comment], url: project_tasks_path do |f| %>
   <%= f.text_area :comment, :class => 'form-control' %>
+  <%= f.submit class: "btn btn-primary" %>
 <% end %>
