--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -14,21 +14,18 @@
         <% end %>
   </div>
 
-    <div>
+    <div class="form-group">
         <%= label_tag :email_address, "Email"%>
       <%= email_field_tag :email_address, "", class:"form-control, col-sm-12" %>
     </div>
-
-
+    <div class="form-group">
       <%= label_tag :password, "Password"%>
       <%= password_field_tag :password, "",  class:"form-control, col-sm-12" %>
-
+    </div>
     <hr>
-
-    <div>
+    <div class="form-group">
       <%= submit_tag "Enter", :class => 'btn btn-primary'%>
     </div>
-
   <% end %>
 
 </div>
