--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -14,7 +14,21 @@
 <%= link_to 'Edit', edit_project_task_path(@project,@task) %> |
 <%= link_to 'Back', project_tasks_path(@project) %>
 
-<%= form_for [@comment], url: project_tasks_path do |f| %>
+<h2>Comments</h2>
+  <% @comments.each do |comment| %>
+    <div class="row">
+      <div class="col-sm-2">
+        <% if comment.user_id %>
+          <%= link_to comment.user.full_name, user_path(comment.user.id) %>
+        <% end %>
+        <div class="col-sm-6">
+          <%= comment.comment %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+<%= form_for [@comment], url: new_task_comments_path(@project,@task) do |f| %>
   <%= f.text_area :comment, :class => 'form-control' %>
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
