--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -16,17 +16,23 @@
 
 <h2>Comments</h2>
   <% @comments.each do |comment| %>
-    <div class="row">
-      <div class="col-sm-2">
-        <% if comment.user_id %>
-          <%= link_to comment.user.full_name, user_path(comment.user.id) %>
-        <% end %>
-        <div class="col-sm-6">
-          <%= comment.comment %>
-        </div>
-      </div>
+<div class = "row">
+  <div class = "col-md-3">
+    <% if comment.user_id %>
+    <%= link_to comment.user.full_name, user_path(comment.user)%>
+    <% else %>
+    (deleted user)
+    <%end%>
+    <div class = "text-muted">
+      <%="#{time_ago_in_words(comment.created_at)} ago"%>
     </div>
-  <% end %>
+  </div>
+  <div class = "col-md-9">
+    <%= comment.comment %>
+  </div>
+</div>
+<br>
+<% end %>
 
 <%= form_for [@comment], url: new_task_comments_path(@project,@task) do |f| %>
   <%= f.text_area :comment, :class => 'form-control' %>
