--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-<p>
-  <strong>Description:</strong>
-  <%= @task.description %>
-</p>
+<div class="page-header">
+  <h1><%= @task.description %></h1><%= link_to 'Edit', edit_project_task_path(@project,@task), class: "btn btn-info pull-right" %>
+</div>
 <p>
   <strong>Date:</strong>
   <%= @task.due %>
@@ -11,7 +9,6 @@
   <strong>Complete:</strong>
   <%= @task.complete %>
 </p>
-<%= link_to 'Edit', edit_project_task_path(@project,@task) %> |
 <%= link_to 'Back', project_tasks_path(@project) %>
 
 <h2>Comments</h2>
