removed show and destroy button added glyphicon and fixed due date formatting

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,11 +10,11 @@
       <%= link_to 'Incomplete', project_tasks_path %>
     <%end%>
   </div>
-    <div class="breadcrumbs">
+    <ul class="breadcrumbs">
       <%= link_to_unless_current 'Projects', projects_path(@project) %> >
       <%= link_to_unless_current @project.name, project_path(@project) %> >
       <%= link_to_unless_current 'Tasks', project_tasks_path(@project,@task) %>
-    </div>
+    </ul>
   </div>
 
   <table class="table">
@@ -30,17 +30,21 @@
     <tbody>
       <% @tasks.each do |task| %>
         <tr>
-            <td><%= task.description %></td>
-            <td><%= task.due %></td>
+          <td><%= task.description %></td>
+            <td><% if task.due %>
+                    <%= task.due.strftime("%m/%d/%Y") %>
+                    <% else nil %>
+                  <%end%>
+            </td>
             <td><%= task.complete %></td>
             <td class="form-actions">
               <div class="pull-right">
-              <%= link_to 'Show', project_task_path(@project,task), class: "btn btn-success" %>
               <%= link_to 'Edit', edit_project_task_path(@project,task), class: "btn btn-primary" %>
-              <%= link_to 'Destroy ', project_task_path(@project,task), class:"btn btn-danger btn-large",
-               method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to "", project_task_path(@project,task),
+               method: :delete, data: { confirm: 'Are you sure?' },
+               class: "glyphicon glyphicon-remove" %>
              </div>
-            </td>
+          </td>
         </tr>
       <% end %>
     </tbody>
