--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,9 @@
   background-color:white;
 }
 
-.icons {
-
+.taskglyph {
+  padding-left:40px;
 }
-
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
