Added tasks index link to show page instead of show button and refactored some css on create comment button on tasks show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,10 @@
 .taskglyph {
   padding-left:40px;
 }
+
+.taskshowsubmit {
+  margin-top:20px;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
