--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -28,9 +28,11 @@
     </thead>
 
     <tbody>
-      <% @tasks.each do |task| %>
+      <% @project.tasks.each do |task| %>
         <tr>
-          <td><%= task.description %></td>
+          <td><%= link_to task.description, project_task_path(@project, task)%>
+          <span class="badge"><%= task.comments.count%></span>
+          </td>
             <td><% if task.due %>
                   <%= task.due.strftime("%m/%d/%Y") %>
             <td><%= task.complete %></td>
