fixed alert status

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
   <div class= "container">
     <% if notice %>
-        <div class= "alert-success text-center" role= "alert">
+        <div class= "alert alert-success text-center" role= "alert">
           <strong><p> <%= notice %></p></strong>
         </div>
     <% end %>
