--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @project.name %> : Manage Members</h1>
 
-  <div class="breadcrumb">
-  <%= link_to_unless_current 'Projects', projects_path(@project) %> >
-  <%= link_to_unless_current @project.name, project_path(@project) %> >
-  <%= link_to_unless_current 'Memberships', project_memberships_path(@project) %>
-  </div>
+<ol class="breadcrumb">
+  <li><a><%= link_to "Projects", projects_path %> </a></li>
+  <li><a> <%= link_to @project.name, project_path(@project) %></a></li>
+  <li class= "active">Memberships</li>
+</ol>
 
   <div>
     <%= render 'membererrorform/membererror', model: @membership %>
