Refactored shared errorform name and replaced on pages

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <div class= "form-horizontal">
 
-<%= render 'errorform/errorform', model: @project %>
+<%= render 'shared/shared_errors', model: @project %>
 
 <%= form_for @project do |f| %>
 
