--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="well well-lg col-md-4 col-md-offset-4">
   <h2>Register for gCamp!</h2>
-  
-<%= render 'errorform/errorform', model: @user %>
+
+<%= render 'shared/shared_errors', model: @user %>
 
   <%= form_for @user, url: signup_path do |f| %>
     <div class="form-group">
