--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,6 +3,11 @@
   <h2><%= @task.description %></h2>
 </div>
 
+<ol class="breadcrumb">
+  <li><a><%= link_to "Tasks", project_tasks_path %> </a></li>
+  <li class= "active"> <%= @task.description %></li>
+</ol>
+
 <p>
   <strong>Date:</strong>
   <%= @task.due %>
