--- a/app/views/pages/about.erb
+++ b/app/views/pages/about.erb
@@ -1,7 +1,26 @@
+<h1><strong>About</strong></h1>
+
+  <div class="jumbotron">
+    <p>Get organized and increase productivity with a team.</p>
+
+    <p>We are dedicated to the makers, the creaters, the risk-takers.  We wake up in the
+    middle of the night and furiously write down ideas about how to make your online
+    life better.</p>
+
+    <p>When we're not hard at work, we're hard at play - we're the loud ones in the bar,
+    and we're always the ones shutting the place down.  Human communication and collaboration
+    is what drives us, and it infuses every feature of gCamp.</p>
 
 
-<div class="jumbotron text-center about">
-  <h1>About</h1>
-    <p>Get organized and increase productivity with your team</p>
-<%= image_tag"meeting.png" %>
-</div>
+      <p>
+        gCamp is extremely active.  Check out our killer stats below!
+      </p>
+
+      <p>
+        <%= pluralize(Project.count, "Project") %>,
+        <%= pluralize(Task.count, "Task") %>,
+        <%= pluralize(Membership.count, "Project Member") %>,
+        <%= pluralize(User.count, "User") %>,
+        <%= pluralize(Comment.count, "Comment") %>
+      </p>
+  </div>
