--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,33 +1,28 @@
-<div class="container">
-    <div class="col-md-offset-4 col-md-4">
-      <div class="well">
+<div class="col-md-4 col-md-offset-4 well well-lg">
 
-    <h2>Log in to gCamp</h2>
-
-  <div class="text-danger">
-      <%= form_tag signin_path do |f| %>
-
-        <% if @sign_in_error %>
-    <font size= "3">
-      <%= @sign_in_error %>
-    </font>
-        <% end %>
-  </div>
-
-    <div class="form-group">
-        <%= label_tag :email_address, "Email"%>
-      <%= email_field_tag :email_address, "", class:"form-control, col-sm-12" %>
+    <h2 class="sign">Log in to gCamp</h2>
+  <div class="form-horizontal">
+    <div class="text-danger">
+        <%= form_tag signin_path do |f| %>
+          <% if @sign_in_error %>
+            <font size= "3">
+                <%= @sign_in_error %>
+            </font>
+          <% end %>
     </div>
-    <div class="form-group">
-      <%= label_tag :password, "Password"%>
-      <%= password_field_tag :password, "",  class:"form-control, col-sm-12" %>
+
+    <div class="form-group control-label">
+      <%= label_tag :email_address, "Email", class: "pull-left" %>
+      <%= email_field_tag :email_address, "", class:"form-control col-sm-12" %>
+    </div>
+    <div class="form-group control-label">
+      <%= label_tag :password, "Password", class: "pull-left"%>
+      <%= password_field_tag :password, "",  class:"form-control col-sm-12" %>
     </div>
     <hr>
     <div class="form-group">
       <%= submit_tag "Enter", :class => 'btn btn-primary'%>
     </div>
   <% end %>
-
-</div>
   </div>
-      </div>
+</div>
