--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,19 +22,15 @@
           <font size= "6"><%= link_to "gCamp", root_path %> </font>
         </ul>
         <ul class= "navbar-brand navbar-nav navbar-right">
-         <li class= "list list-unstyled"><% if current_user %>
-
-         <%= link_to ("#{current_user.first_name} #{current_user.last_name}"), user_path(current_user) %>
-
-         <%= link_to "Sign Out", signout_path %>
-
-    <% else %>
-
-         <%= link_to "Sign Up", signup_path %>
-
-         <%= link_to "Sign In", signin_path %>
-
-    <% end %></li>
+         <li class= "list list-unstyled">
+          <% if current_user %>
+           <%= link_to ("#{current_user.first_name} #{current_user.last_name}"), user_path(current_user) %>
+           <%= link_to "Sign Out", signout_path %>
+          <% else %>
+           <%= link_to "Sign Up", signup_path %>
+           <%= link_to "Sign In", signin_path %>
+          <% end %>
+        </li>
         </ul>
         </div>
       </div>
