--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,17 +18,16 @@
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <ul class="navbar-brand">
-          <font size= "6"><%= link_to "gCamp", root_path %> </font>
-        </ul>
-        <ul class= "navbar-brand navbar-nav navbar-right">
-         <li class= "list list-unstyled">
+
+          <%= link_to "gCamp", root_path, class: "navbar-brand" %>
+        
+        <ul class= "navbar-nav navbar-right nav">
           <% if current_user %>
-           <%= link_to ("#{current_user.first_name} #{current_user.last_name}"), user_path(current_user) %>
-           <%= link_to "Sign Out", signout_path %>
+           <li><%= link_to ("#{current_user.first_name} #{current_user.last_name}"), user_path(current_user) %></li>
+           <li><%= link_to "Sign Out", signout_path %></li>
           <% else %>
-           <%= link_to "Sign Up", signup_path %>
-           <%= link_to "Sign In", signin_path %>
+           <li><%= link_to "Sign Up", signup_path %></li>
+           <li><%= link_to "Sign In", signin_path %></li>
           <% end %>
         </li>
         </ul>
