--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -19,7 +19,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
 
-          <%= link_to "gCamp", root_path, class: "navbar-brand" %>
+          <%= link_to "gCamp", projects_path, class: "navbar-brand" %>
 
         <ul class= "navbar-nav navbar-right nav">
           <% if current_user %>
@@ -51,7 +51,7 @@
 
       <%= link_to_unless_current "About", about_path %> |
       <%= link_to_unless_current "Terms", terms_path %> |
-      <%= link_to_unless_current "FAQ", faq_path %> |
+      <%= link_to_unless_current "FAQ", faq_path %>
 
       <div class = "icons pull-right">
         <%= link_to "https://www.twitter.com/dpmidd" do %>
