--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,9 +39,22 @@
   </div>
 
   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-5">
+      <% if current_user.admin == true %>
+      <div class="checkbox">
+        <label>
+          <%= f.check_box :admin %> Admin
+        </label>
+      </div>
+    </div>
+  </div>
+      <% end %>
+
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-5"> <br>
       <%= f.submit button_name:"Create User", class: "btn btn-primary" %>
     </div>
   </div>
   <%end%>
+
 </div>
