--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,33 +1,40 @@
-<div class="well well-lg col-md-4 col-md-offset-4">
-  <h2>Register for gCamp!</h2>
+<br>
+  <div class="col-sm-12">
+    <div class="col-sm-offset-4 col-sm-4">
+      <div class="well">  <h2>Register for gCamp!</h2>
 
 <%= render 'shared/shared_errors', model: @user %>
 
   <%= form_for @user, url: signup_path do |f| %>
     <div class="form-group">
       <%= f.label :first_name %>
-      <%= f.text_field :first_name, class:"form-control, col-sm-12" %>
+      <%= f.text_field :first_name, class:"form-control" %>
     </div>
 
     <div class="form-group">
       <%= f.label :last_name %>
-      <%= f.text_field :last_name, class:"form-control, col-sm-12" %>
+      <%= f.text_field :last_name, class:"form-control" %>
     </div>
 
     <div class="form-group">
       <%= f.label :email_address %>
-      <%= f.email_field :email_address, class:"form-control, col-sm-12" %>
+      <%= f.email_field :email_address, class:"form-control" %>
     </div>
 
     <div class="form-group">
       <%= f.label :password %>
-      <%= f.password_field :password, class:"form-control, col-sm-12" %>
+      <%= f.password_field :password, class:"form-control" %>
+    </div>
 
     <div class="form-group">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class:"form-control, col-sm-12" %>
+      <%= f.password_field :password_confirmation, class:"form-control" %>
     </div>
     <hr>
         <%= submit_tag "Register", :class => 'btn btn-primary'%>
   <% end %>
+
+
+    </div>
+  </div>
 </div>
