--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,53 @@
+<% current_user_array = [] %>
+<% current_user.memberships.each do |membership| %>
+<% current_user_array.push(membership.project_id) %>
+<% end %>
+<% current_user_array %>
+
 <div class="page-header">
-  <%= link_to 'Create User', new_user_path, class: "btn btn-info"%>
-       <table class="table">
-         <thead>
-           <tr>
-             <th>Name</th>
-             <th>Email</th>
-           </tr>
-         </thead>
-         <tbody>
-           <% @users.each do |user| %>
+    <%= link_to 'Create User', new_user_path, class:"btn btn-info btn-large pull-right" %>
+  <h1>Users</h1>
 </div>
-           <tr>
-               <td><%= link_to user.first_name, user_path(user) %><%= " " %>
-               <%= link_to user.last_name, user_path(user) %></td>
-               <td><%= link_to user.email_address, user_path(user) %></td>
-               <td class="form-actions">
-                 <div class="pull-right">
-                 <%= link_to 'Show', user, class: "btn btn-success" %>
-                 <%= link_to 'Edit', edit_user_path(user), class: "btn btn-primary" %>
-                 <%= link_to 'Destroy ', user, class:"btn btn-danger btn-large",
-                 method: :delete, data: { confirm: 'Are you sure?' } %>
-                 </div>
-               </td>
-           </tr>
-         <% end %>
-       </tbody>
-     </table>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>
+          Name
+        </th>
+        <th>
+          Email
+        </th>
+        <th>
+        </th>
+      </tr>
+    </thead>
+
+  <tbody>
+    <% @users.each do |user| %>
+      <%user.memberships.each do |membership| %>
+      <% @user_array = membership.id%>
+      <% end %>
+      <% user_array = [] %>
+      <% user.memberships.each do |membership| %>
+        <% user_array.push(membership.project_id) %>
+      <% end %>
+      <% user_array %>
+      <tr>
+        <td>
+          <%= link_to "#{user.first_name} #{user.last_name}", user_path(user)%>
+        </td>
+        <td class="col-sm-10">
+          <% if (current_user.admin == true) || !(current_user_array & user_array).empty? || current_user == user %>
+          <%= mail_to(user.email_address)%>
+          <% end %>
+        </td>
+        <td>
+          <% if (current_user.admin == true) || !(current_user_array & user_array).empty? || current_user == user %>
+          <%= link_to("Edit", edit_user_path(user)) %>
+          <% end %>
+        </td>
+      </tr>
+    <%end%>
+  </tbody>
+</table>
