--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,31 +1,35 @@
 <%= form_for [@project,@task], html: {class: "form-horizontal"} do |f| %>
 
-  <%= render 'shared/shared_errors', model: @task %>
-
-  <div class="field form-group">
-      <%= f.label :description, :class => 'col-sm-2 control-label' %>
-      <div class="col-sm-5">
-        <%= f.text_field :description, :class => "form-control"%>
-      </div>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-6">
+      <%= render "shared/shared_errors", model: @task %>
     </div>
+  </div>
 
-   <div class="field form-group">
-      <%= f.label :due, :class => 'col-sm-2 control-label' %>
-      <div class="col-sm-5">
-        <%= f.date_field :due, :class => "col-sm-10 form-control" %>
-      </div>
+  <div class="form-group">
+    <%= f.label :description, :class => 'col-sm-1' %>
+    <div class="col-sm-3">
+      <%= f.text_field :description, :class => "form-control"%>
+    </div>
+  </div>
+
+   <div class="form-group">
+    <%= f.label :due, :class => 'col-sm-1' %>
+    <div class="col-sm-2">
+    <%= f.date_field :due, :class => "form-control" %>
+    </div>
   </div>
 
   <% if @task.id? %>
     <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <%= f.check_box :complete %> Complete
-        </label>
+      <div class="col-sm-offset-1 col-sm-10">
+        <div class="checkbox">
+          <label>
+            <%= f.check_box :complete %> Complete
+          </label>
+        </div>
       </div>
     </div>
-  </div>
   <% else %>
     <% @task.complete = false %>
   <%end%>
@@ -33,5 +37,4 @@
   <div class="actions col-sm-offset-1">
     <%= f.submit class: "btn btn-primary" %>
   </div>
-  <br>
-<% end %>
+    <% end %>
