--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,8 +4,10 @@
 </div>
 
 <ol class="breadcrumb">
-  <li><a><%= link_to "Tasks", project_tasks_path %> </a></li>
-  <li class= "active"> <%= @task.description %></li>
+  <li><a href="/projects">Projects</a></li>
+  <li><%= link_to @project.name, @project %></li>
+  <li><%= link_to "Tasks", project_tasks_path(@project) %></li>
+  <li class="active">Show</li>
 </ol>
 
 <p>
