Added api key to show and user create

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,11 @@
       <%= mail_to @user.email_address %>
     </p>
 
+    <p>
+      <strong>Pivotal Tracker Token:</strong>
+      <%= "#{@user.pivot_token[0..3]}** *********" %>
+    </p>
+
       <%= link_to 'Edit', edit_user_path(@user) %> |
       <%= link_to 'Back', users_path %>
 
