--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,6 +38,13 @@
     </div>
   </div>
 
+  <div class ="form-group">
+    <%= f.label :pivot_token, "Pivotal Tracker Token", class: "col-sm-2 control-label" %>
+    <div class="col-sm-5">
+      <%= f.text_field :pivot_token, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-5">
       <% if current_user.admin == true %>
