--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,12 @@
       <%= mail_to @user.email_address %>
     </p>
 
+    <% unless @user.pivot_token == nil %>
     <p>
       <strong>Pivotal Tracker Token:</strong>
       <%= "#{@user.pivot_token[0..3]}***********" %>
     </p>
+    <% end %>
 
       <%= link_to 'Edit', edit_user_path(@user) %> |
       <%= link_to 'Back', users_path %>
