--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>gCamp</title>
+    <title><%= content_for(:title) || "gCamp" %></title>
 
     <%= stylesheet_link_tag 'application' %>
 
