--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,6 @@
-  <div class= "page-header">
-    <div class= "pull-right">
-      <%= link_to 'Create Project', new_project_path, class:"btn btn-primary" %>
-      </div>
-      <h1>Projects</h1>
-      </div>
-
+<%= page_header "Projects" do %>
+  <%= link_to 'Create Project', new_project_path, class:"btn btn-primary" %>
+<% end %>
   <table class = "table">
     <thead>
       <tr>
@@ -45,13 +41,13 @@
   </thead>
     <tbody>
     <% unless @tracker_projects == nil %>
-    <% @tracker_projects.each do |project|%>
-    <tr>
-      <td>
-        <%= link_to project[:name], tracker_project_path(project[:id]) %>
-      </td>
-    </tr>
-    <% end %>
+      <% @tracker_projects.each do |project|%>
+        <tr>
+          <td>
+            <%= link_to project[:name], tracker_project_path(project[:id]) %>
+          </td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
