Whitespace and now users can't comment blank comments on tasks comments

--- a/app/views/tracker_projects/show.html.erb
+++ b/app/views/tracker_projects/show.html.erb
@@ -1,13 +1,27 @@
-<h1>Tracker Projects</h1> (showing first 500)
+<div class="page-header">
+  <div class="pull-right">
+    <p>
+      (showing first 500)
+    </p>
+  </div>
+    <h1>Projects for <%= @pivotal_project %></h1>
+</div>
 
-<table class = "table">
+<table class="table table-striped table-bordered">
   <thead>
-    <tr>
-      <th>Story</th>
-      <th>Estimate</th>
-      <th>Labels</th>
-      <th>Current State</th>
-      <th colspan="3"></th>
-    </tr>
+    <th class="active">
+      Story
+    </th>
+    <th class="active">
+      Estimate
+    </th>
+    <th class="active">
+      Labels
+    </th>
+    <th class="active">
+      Current State
+    </th>
   </thead>
+  <tbody>
+  </tbody>
 </table>
