--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,8 @@
-<div class="page-header"><h1>Tasks for <%= @project.name %>
+<div class="page-header">
+  <h1>Tasks for <%= @project.name %>
   <%= link_to 'Create Task', new_project_task_path(@project,@task),
-  class: "btn btn-info btn-large pull-right" %></h1>
+  class: "btn btn-info btn-large pull-right" %>
+  </h1>
   <div class= "pull-right">
     <%= link_to_unless_current 'All', project_tasks_path(sort_by: "all")  %> |
     <%if params[:sort_by] == nil%>
