Fixed image and whitespace

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -26,7 +26,7 @@
 
 
       <div class="col-md-4">
-          <img src="http://www.imcreator.com/wp-content/uploads/2013/10/wpid-Featured_Picture405-620x413.jpg" class="img-responsive">
+          <img src="http://ak9.picdn.net/shutterstock/videos/657133/preview/stock-footage-handsome-business-man-working-at-a-laptop-sitting-on-sofa.jpg" class="img-responsive">
             <div class="panel panel-default">
 
               <div class= "panel heading"><h2>Documents</h2></div>
