Fixed github link after changed username

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -60,7 +60,7 @@
           <%= image_tag("twitterlogo.png", width: "20em") %>
         <% end %>
 
-        <%= link_to "https://www.github.com/dmidd87" do %>
+        <%= link_to "https://www.github.com/dpmidd" do %>
           <%= image_tag("github.png", width: "20em") %>
         <% end %>
 
